--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
           "type":"image/png"
        }
     ],
-    "start_url":"maheenc9395.github.io/Final-project/",
+    "start_url":"https://maheenc9395.github.io/Final-project/",
     "orientation":"any",
     "display":"standalone",
     "dir":"auto",
